--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,6 +4,19 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.chart-row {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.chart-row svg {
+    flex: 1;
+    height: auto;
+    max-width: 45%;
+}
+
 /* General Chart CSS */
 
 .chart-title {
